--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Urlaub-Ferien.net – Domain zu vermieten / Domain for rent</title>
+  <title>Urlaub-Ferien.net – Domain zu vermieten</title>
   <meta name="description" content="Urlaub-Ferien.net – Premium-Domain für Tourismus. Vermietung, Zusammenarbeit oder Übernahme. Kontakt: zagrebrental2000@gmail.com">
   <link rel="canonical" href="http://urlaub-ferien.net/">
+  <meta name="robots" content="index,follow">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +15,7 @@
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Urlaub-Ferien.net – Domain zu vermieten / Domain for rent">
+  <meta property="og:title" content="Urlaub-Ferien.net – Domain zu vermieten">
   <meta property="og:description" content="Premium-Domain für Tourismus. Vermietung, Zusammenarbeit oder Übernahme.">
   <meta property="og:url" content="http://urlaub-ferien.net/">
   <meta property="og:image" content="https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=1200&h=630">
@@ -36,7 +37,7 @@
       color:#fff;
       background-image:
         linear-gradient(var(--bg-overlay),var(--bg-overlay)),
-        url("https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=2000&h=1200"); /* Pexels palma + more */
+        url("https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=2000&h=1200"); /* Pexels palma + meer */
       background-size:cover;
       background-position:center;
       background-attachment:fixed;
@@ -54,13 +55,6 @@
     .brand{letter-spacing:.5px;font-weight:700;font-size:clamp(26px,5vw,44px);margin:.2rem 0 1rem}
     .tag{opacity:.95;font-size:clamp(14px,2.2vw,18px);margin:0 0 1.25rem}
 
-    .langs{display:flex; gap:8px; justify-content:center; flex-wrap:wrap; margin-bottom:18px}
-    .lang-btn{
-      border:1px solid rgba(255,255,255,.45); color:#fff; background:transparent;
-      padding:8px 12px; border-radius:999px; cursor:pointer; font-weight:600; transition:.18s all ease;
-    }
-    .lang-btn[aria-pressed="true"], .lang-btn:hover{background:var(--accent); border-color:transparent}
-
     .grid{display:grid; gap:14px; grid-template-columns:1fr}
     @media (min-width:820px){ .grid{grid-template-columns:2fr 1fr} }
 
@@ -77,145 +71,4 @@
       display:flex; flex-direction:column; justify-content:center; align-items:flex-start;
       gap:.6rem;
     }
-    .ad h3{margin:0; font-size:clamp(16px,2.2vw,20px); color:#074d86}
-    .ad p{margin:0; color:#1a2a3a}
-    .ad .cta-mini{
-      display:inline-flex; align-items:center; gap:8px; margin-top:.3rem;
-      background:var(--accent); color:#fff; text-decoration:none; font-weight:700;
-      padding:10px 14px; border-radius:999px; transition:.2s background;
-    }
-    .ad .cta-mini:hover{background:var(--accent-2)}
-
-    .cta{
-      margin-top:18px; display:inline-flex; align-items:center; gap:10px;
-      background:var(--accent); color:#fff; text-decoration:none; font-weight:700;
-      padding:12px 18px; border-radius:999px; transition:.2s background;
-    }
-    .cta:hover{background:var(--accent-2)}
-    .mini{opacity:.8; font-size:12px; margin-top:8px}
-    footer{margin-top:16px; text-align:center; opacity:.85; font-size:12px}
-    a{color:var(--accent-2); font-weight:600}
-
-    /* Brojač — dno desno */
-    .badge-visits{
-      position:fixed;
-      right:14px;
-      bottom:12px;
-      background:#fff;
-      color:#111;
-      border:1px solid #e5e7eb;
-      border-radius:999px;
-      box-shadow:0 6px 18px rgba(0,0,0,.08);
-      padding:6px 10px;
-      font:500 12px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      z-index:9999;
-    }
-  </style>
-</head>
-<body>
-  <div class="badge-visits" id="visits">Visits: –</div>
-
-  <main class="shell">
-    <section class="hero">
-      <h1 class="brand">Urlaub-Ferien.net</h1>
-      <p class="tag" id="tagline">
-        Premium domain for tourism — available for rent, collaboration, or acquisition.
-      </p>
-
-      <!-- language selector -->
-      <div class="langs" role="tablist" aria-label="Language selector">
-        <button class="lang-btn" data-lang="de" aria-pressed="true">🇩🇪 Deutsch</button>
-        <button class="lang-btn" data-lang="en" aria-pressed="false">🇬🇧 English</button>
-        <button class="lang-btn" data-lang="hr" aria-pressed="false">🇭🇷 Hrvatski</button>
-      </div>
-
-      <div class="grid">
-        <!-- DE -->
-        <article class="card lang lang-de" aria-live="polite">
-          <h2>Diese Domain ist verfügbar</h2>
-          <p>zur <strong>Vermietung</strong>, <strong>Zusammenarbeit</strong> oder <strong>Übernahme</strong>. Ideal für Reisebüros, Hotels, Vermieter, Portale oder Agenturen.</p>
-          <a class="cta" href="mailto:zagrebrental2000@gmail.com?subject=Urlaub-Ferien.net%20Anfrage">Kontakt aufnehmen</a>
-          <div class="mini">E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a></div>
-        </article>
-        <aside class="card ad lang lang-de">
-          <h3>Ihre Anzeige hier</h3>
-          <p>Platzieren Sie Ihre Kampagne auf dieser Domain.</p>
-          <a class="cta-mini" href="mailto:zagrebrental2000@gmail.com?subject=Anzeige%20auf%20Urlaub-Ferien.net">Angebot anfragen</a>
-        </aside>
-
-        <!-- EN -->
-        <article class="card lang lang-en" hidden>
-          <h2>This domain is available</h2>
-          <p>for <strong>rent</strong>, <strong>collaboration</strong>, or <strong>acquisition</strong>. Perfect for travel agencies, hotels, rentals, portals, or marketing teams.</p>
-          <a class="cta" href="mailto:zagrebrental2000@gmail.com?subject=Urlaub-Ferien.net%20Inquiry">Contact now</a>
-          <div class="mini">E-mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a></div>
-        </article>
-        <aside class="card ad lang lang-en" hidden>
-          <h3>Your ad here</h3>
-          <p>Showcase your campaign on this domain.</p>
-          <a class="cta-mini" href="mailto:zagrebrental2000@gmail.com?subject=Ad%20on%20Urlaub-Ferien.net">Get a quote</a>
-        </aside>
-
-        <!-- HR -->
-        <article class="card lang lang-hr" hidden>
-          <h2>Domena je dostupna</h2>
-          <p>za <strong>najam</strong>, <strong>suradnju</strong> ili <strong>preuzimanje</strong>. Idealno za turističke agencije, hotele, iznajmljivače, portale ili marketinške timove.</p>
-          <a class="cta" href="mailto:zagrebrental2000@gmail.com?subject=Urlaub-Ferien.net%20Upit">Pošaljite upit</a>
-          <div class="mini">E-mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a></div>
-        </article>
-        <aside class="card ad lang lang-hr" hidden>
-          <h3>Vaš oglas ovdje</h3>
-          <p>Postavite kampanju na ovoj domeni.</p>
-          <a class="cta-mini" href="mailto:zagrebrental2000@gmail.com?subject=Oglas%20na%20Urlaub-Ferien.net">Zatraži ponudu</a>
-        </aside>
-      </div>
-
-      <footer>© 2025 Urlaub-Ferien.net — All rights reserved.</footer>
-    </section>
-  </main>
-
-  <!-- Visits counter (localStorage; starts at 10500) -->
-  <script>
-  (function(){
-    const KEY = 'visits_' + location.hostname;
-    const raw = localStorage.getItem(KEY);
-    const prev = parseInt(raw, 10);
-    let n;
-    if (!raw || isNaN(prev) || prev < 10500) { n = 10500; } else { n = prev + 1; }
-    localStorage.setItem(KEY, String(n));
-    const el = document.getElementById('visits');
-    if (el) el.textContent = 'Visits: ' + n.toLocaleString('en-US');
-  })();
-  </script>
-
-  <!-- Language switcher -->
-  <script>
-    const btns = document.querySelectorAll('.lang-btn');
-    const groups = {
-      de: document.querySelectorAll('.lang-de'),
-      en: document.querySelectorAll('.lang-en'),
-      hr: document.querySelectorAll('.lang-hr')
-    };
-    const tagline = document.getElementById('tagline');
-    const lines = {
-      de: "Premium-Domain für Tourismus — verfügbar zur Vermietung, Zusammenarbeit oder Übernahme.",
-      en: "Premium domain for tourism — available for rent, collaboration, or acquisition.",
-      hr: "Premium domena za turizam — dostupna za najam, suradnju ili preuzimanje."
-    };
-    function setLang(lang){
-      btns.forEach(b=>b.setAttribute('aria-pressed', String(b.dataset.lang===lang)));
-      Object.keys(groups).forEach(k=>{
-        groups[k].forEach(el => el.hidden = (k !== lang));
-      });
-      tagline.textContent = lines[lang];
-      document.documentElement.lang = lang === 'hr' ? 'hr' : lang;
-      try{ localStorage.setItem('uf_lang', lang); }catch(e){}
-    }
-    btns.forEach(b=> b.addEventListener('click', ()=> setLang(b.dataset.lang)));
-    try{
-      const saved = localStorage.getItem('uf_lang');
-      if(saved && groups[saved]) setLang(saved);
-    }catch(e){}
-  </script>
-</body>
-</html>
+    .ad h3{margin:0; font-size:clamp(16px,2.
