--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Urlaub-Ferien.net – Domain zu vermieten</title>
-  <meta name="description" content="Urlaub-Ferien.net – Premium-Domain für Tourismus. Vermietung, Zusammenarbeit oder Übernahme. Kontakt: zagrebrental2000@gmail.com">
+  <meta name="description" content="Urlaub-Ferien.net – Premium-Domain für Tourismus & Reisen. Vermietung, Zusammenarbeit oder Übernahme. Kontakt: zagrebrental2000@gmail.com">
   <link rel="canonical" href="http://urlaub-ferien.net/">
   <meta name="robots" content="index,follow">
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Urlaub-Ferien.net – Domain zu vermieten">
-  <meta property="og:description" content="Premium-Domain für Tourismus. Vermietung, Zusammenarbeit oder Übernahme.">
+  <meta property="og:description" content="Premium-Domain für Tourismus & Reisen. Vermietung, Zusammenarbeit oder Übernahme.">
   <meta property="og:url" content="http://urlaub-ferien.net/">
   <meta property="og:image" content="https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=1200&h=630">
   <meta name="twitter:card" content="summary_large_image">
 
+  <!-- Fonts & Favicon -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml">
+
   <style>
     :root{
-      --bg-overlay: rgba(10,50,100,.45);
-      --card-bg: rgba(255,255,255,.92);
+      --bg-overlay: rgba(10,50,100,.58);   /* jači overlay da tekst bude SIGURNO čitljiv */
+      --card-bg: rgba(255,255,255,.94);
       --accent: #2bb3ff;
       --accent-2: #0e7ac7;
       --text: #0d1520;
@@ -33,11 +36,12 @@
     html,body{height:100%}
     body{
       margin:0;
+      min-height:100vh;
       font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       color:#fff;
       background-image:
         linear-gradient(var(--bg-overlay),var(--bg-overlay)),
-        url("https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=2000&h=1200"); /* Pexels palma + meer */
+        url("https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&w=2000&h=1300");
       background-size:cover;
       background-position:center;
       background-attachment:fixed;
@@ -46,6 +50,7 @@
     }
     .shell{width:min(980px,100%)}
     .hero{
+      position:relative;
       text-align:center; padding:36px 28px; border-radius:22px;
       backdrop-filter: blur(2px);
       background: linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.06));
@@ -63,12 +68,93 @@
       background:var(--card-bg); padding:22px; border-radius:16px;
       box-shadow:0 12px 28px rgba(0,0,0,.18);
     }
-    .card h2{margin:0 0 .35rem; font-size:clamp(18px,2.4vw,22px)}
-    .card p{margin:.35rem 0; line-height:1.55}
+    .card h2{margin:0 0 .5rem; font-size:clamp(18px,2.4vw,22px)}
+    .card p, .card li{margin:.35rem 0; line-height:1.6}
 
     .ad{
-      border:2px dashed #9ad8ff; background:rgba(255,255,255,.96);
+      border:2px dashed #9ad8ff; background:#fff;
       display:flex; flex-direction:column; justify-content:center; align-items:flex-start;
       gap:.6rem;
     }
-    .ad h3{margin:0; font-size:clamp(16px,2.
+    .ad h3{margin:0; font-size:clamp(16px,2.2vw,20px); color:#074d86}
+    .ad p{margin:0; color:#1a2a3a}
+
+    .cta{
+      margin-top:18px; display:inline-flex; align-items:center; gap:10px;
+      background:var(--accent); color:#fff; text-decoration:none; font-weight:700;
+      padding:12px 18px; border-radius:999px; transition:.2s background;
+    }
+    .cta:hover{background:var(--accent-2)}
+    .cta-mini{
+      display:inline-flex; align-items:center; gap:8px; margin-top:.3rem;
+      background:var(--accent); color:#fff; text-decoration:none; font-weight:700;
+      padding:10px 14px; border-radius:999px; transition:.2s background;
+    }
+    .cta-mini:hover{background:var(--accent-2)}
+    .mini{opacity:.8; font-size:12px; margin-top:8px}
+    footer{margin-top:16px; text-align:center; opacity:.85; font-size:12px}
+
+    /* Brojač — dno desno */
+    .badge-visits{
+      position:fixed; right:14px; bottom:12px;
+      background:#fff; color:#111; border:1px solid #e5e7eb; border-radius:999px;
+      box-shadow:0 6px 18px rgba(0,0,0,.08);
+      padding:6px 10px; font:500 12px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      z-index:9999;
+    }
+  </style>
+</head>
+<body>
+  <!-- Vidljiv brojač -->
+  <div class="badge-visits" id="visits">Visits: –</div>
+
+  <main class="shell">
+    <section class="hero">
+      <h1 class="brand">Urlaub-Ferien.net</h1>
+      <p class="tag">Premium-Domain für Tourismus & Reisen — verfügbar zur Vermietung, Zusammenarbeit oder Übernahme.</p>
+
+      <div class="grid">
+        <!-- Glavni tekst -->
+        <article class="card" aria-live="polite">
+          <h2>Diese Domain ist verfügbar</h2>
+          <p>Ideal für <strong>Reisebüros</strong>, <strong>Hotels</strong>, <strong>Ferienwohnungen</strong>, Buchungsportale oder Kampagnen im DACH-Markt.</p>
+          <ul style="margin:.2rem 0 0 1.1rem">
+            <li>Markenfähig: kurz, prägnant, leicht zu merken</li>
+            <li>Hohe Glaubwürdigkeit & starke Klickrate</li>
+            <li>Optionen: Miete • Kooperation • Übernahme</li>
+          </ul>
+          <a class="cta" href="mailto:zagrebrental2000@gmail.com?subject=Urlaub-Ferien.net%20Anfrage">Kontakt aufnehmen</a>
+          <div class="mini">E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a></div>
+        </article>
+
+        <!-- Oglasni blok -->
+        <aside class="card ad">
+          <h3>Ihre Anzeige hier</h3>
+          <p>Platzieren Sie Ihre Kampagne auf dieser Domain.</p>
+          <a class="cta-mini" href="mailto:zagrebrental2000@gmail.com?subject=Anzeige%20auf%20Urlaub-Ferien.net">Angebot anfragen</a>
+        </aside>
+      </div>
+
+      <footer>© 2025 Urlaub-Ferien.net — Alle Rechte vorbehalten.</footer>
+    </section>
+  </main>
+
+  <!-- Visits counter (localStorage; starts at 10500) -->
+  <script>
+  (function(){
+    const KEY = 'visits_' + location.hostname;
+    const raw = localStorage.getItem(KEY);
+    const prev = parseInt(raw, 10);
+    let n;
+    if (!raw || isNaN(prev) || prev < 10500) { n = 10500; } else { n = prev + 1; }
+    localStorage.setItem(KEY, String(n));
+    const el = document.getElementById('visits');
+    if (el) el.textContent = 'Visits: ' + n.toLocaleString('en-US');
+  })();
+  </script>
+
+  <noscript>
+    <div style="position:fixed;left:12px;bottom:12px;background:#fff;color:#111;border:1px solid #ddd;border-radius:10px;padding:6px 10px;font:600 12px system-ui">JavaScript ist deaktiviert – einige Funktionen sind nicht verfügbar.</div>
+  </noscript>
+</body>
+</html>
