--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <style>
     :root{
-      --bg-overlay: rgba(10,50,100,.58);   /* jači overlay da tekst bude SIGURNO čitljiv */
+      --bg-overlay: rgba(10,50,100,.58);
       --card-bg: rgba(255,255,255,.94);
       --accent: #2bb3ff;
       --accent-2: #0e7ac7;
@@ -35,30 +35,30 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      min-height:100vh;
+      margin:0; min-height:100vh;
       font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       color:#fff;
       background-image:
         linear-gradient(var(--bg-overlay),var(--bg-overlay)),
         url("https://images.pexels.com/photos/88212/pexels-photo-88212.jpeg?auto=compress&cs=tinysrgb&w=2000&h=1300");
-      background-size:cover;
-      background-position:center;
-      background-attachment:fixed;
-      display:flex; align-items:center; justify-content:center;
+      background-size:cover; background-position:center; background-attachment:fixed;
+      display:flex; align-items:flex-start; justify-content:center;
       padding:24px;
     }
     .shell{width:min(980px,100%)}
     .hero{
-      position:relative;
-      text-align:center; padding:36px 28px; border-radius:22px;
+      position:relative; text-align:center; padding:28px 22px; border-radius:22px;
       backdrop-filter: blur(2px);
       background: linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.06));
       border:1px solid rgba(255,255,255,.18);
       box-shadow:0 10px 30px rgba(0,0,0,.25);
     }
-    .brand{letter-spacing:.5px;font-weight:700;font-size:clamp(26px,5vw,44px);margin:.2rem 0 1rem}
-    .tag{opacity:.95;font-size:clamp(14px,2.2vw,18px);margin:0 0 1.25rem}
+    .brand{letter-spacing:.5px;font-weight:700;font-size:clamp(26px,5vw,44px);margin:.2rem 0 .6rem}
+    .tag{opacity:.95;font-size:clamp(14px,2.2vw,18px);margin:0 0 1rem}
+
+    .mini-nav{margin:.4rem 0 1.2rem; font-size:14px}
+    .mini-nav a{color:#fff; text-decoration:underline; opacity:.95}
+    .mini-nav span{opacity:.5; padding:0 8px}
 
     .grid{display:grid; gap:14px; grid-template-columns:1fr}
     @media (min-width:820px){ .grid{grid-template-columns:2fr 1fr} }
@@ -69,7 +69,8 @@
       box-shadow:0 12px 28px rgba(0,0,0,.18);
     }
     .card h2{margin:0 0 .5rem; font-size:clamp(18px,2.4vw,22px)}
-    .card p, .card li{margin:.35rem 0; line-height:1.6}
+    .card h3{margin:1rem 0 .4rem; font-size:clamp(16px,2.1vw,19px)}
+    .card p,.card li{margin:.35rem 0; line-height:1.6}
 
     .ad{
       border:2px dashed #9ad8ff; background:#fff;
@@ -94,6 +95,11 @@
     .mini{opacity:.8; font-size:12px; margin-top:8px}
     footer{margin-top:16px; text-align:center; opacity:.85; font-size:12px}
 
+    /* FAQ akordeon */
+    details{border:1px solid #e5e7eb; border-radius:12px; padding:12px 14px; background:#fff; margin:.6rem 0}
+    summary{cursor:pointer; font-weight:700; color:#0d1520}
+    details p{margin:.5rem 0 0 0; color:#0d1520}
+
     /* Brojač — dno desno */
     .badge-visits{
       position:fixed; right:14px; bottom:12px;
@@ -105,7 +111,6 @@
   </style>
 </head>
 <body>
-  <!-- Vidljiv brojač -->
   <div class="badge-visits" id="visits">Visits: –</div>
 
   <main class="shell">
@@ -113,8 +118,13 @@
       <h1 class="brand">Urlaub-Ferien.net</h1>
       <p class="tag">Premium-Domain für Tourismus & Reisen — verfügbar zur Vermietung, Zusammenarbeit oder Übernahme.</p>
 
+      <div class="mini-nav">
+        <a href="#faq">FAQ</a><span>•</span>
+        <a href="#impressum">Impressum</a><span>•</span>
+        <a href="#datenschutz">Datenschutz</a>
+      </div>
+
       <div class="grid">
-        <!-- Glavni tekst -->
         <article class="card" aria-live="polite">
           <h2>Diese Domain ist verfügbar</h2>
           <p>Ideal für <strong>Reisebüros</strong>, <strong>Hotels</strong>, <strong>Ferienwohnungen</strong>, Buchungsportale oder Kampagnen im DACH-Markt.</p>
@@ -127,7 +137,6 @@
           <div class="mini">E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a></div>
         </article>
 
-        <!-- Oglasni blok -->
         <aside class="card ad">
           <h3>Ihre Anzeige hier</h3>
           <p>Platzieren Sie Ihre Kampagne auf dieser Domain.</p>
@@ -135,9 +144,120 @@
         </aside>
       </div>
 
+      <!-- FAQ -->
+      <article class="card" id="faq" style="margin-top:14px">
+        <h2>FAQ</h2>
+        <details>
+          <summary>Wie funktioniert die Vermietung der Domain?</summary>
+          <p>Sie erhalten die exklusive Nutzung (Weiterleitung, Unterseite oder komplette Landingpage). Laufzeit und Preis nach Absprache.</p>
+        </details>
+        <details>
+          <summary>Ist die Domain international nutzbar?</summary>
+          <p>Ja. Fokus ist DACH, aber Weiterleitungen und Kampagnen können weltweit geschaltet werden.</p>
+        </details>
+        <details>
+          <summary>Gibt es Tracking oder Cookies?</summary>
+          <p>Keine Cookies, kein externes Tracking. Es wird lediglich ein lokaler Zähler (localStorage) im Browser gespeichert – keine personenbezogenen Daten.</p>
+        </details>
+      </article>
+
+      <!-- Impressum -->
+      <article class="card" id="impressum" style="margin-top:14px">
+        <h2>Impressum</h2>
+        <p><strong>Betreiber dieser Website:</strong><br>
+        [Ihr Name / Ihre Firma]<br>
+        [Straße und Hausnummer]<br>
+        [PLZ Ort], [Land]</p>
+
+        <p><strong>Kontakt:</strong><br>
+        E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a><br>
+        Telefon: [optional]</p>
+
+        <p><strong>USt-IdNr.:</strong> [falls vorhanden]</p>
+
+        <h3>Haftung für Inhalte</h3>
+        <p>Als Diensteanbieter sind wir für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Wir übernehmen keine Gewähr für Aktualität, Richtigkeit und Vollständigkeit.</p>
+
+        <h3>Haftung für Links</h3>
+        <p>Diese Website kann Links zu externen Websites Dritter enthalten. Auf deren Inhalte haben wir keinen Einfluss; dafür ist stets der jeweilige Anbieter verantwortlich.</p>
+
+        <h3>Urheberrecht</h3>
+        <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem Urheberrecht. Vervielfältigung nur mit schriftlicher Zustimmung.</p>
+      </article>
+
+      <!-- Datenschutz -->
+      <article class="card" id="datenschutz" style="margin-top:14px">
+        <h2>Datenschutzerklärung</h2>
+        <p><strong>Verantwortlich:</strong> siehe Impressum.</p>
+
+        <h3>Zugriffsdaten / Server-Logs</h3>
+        <p>Der Hosting-Provider erhebt automatisch Server-Logfiles (z. B. IP-Adresse, Datum/Uhrzeit, abgerufene Seite, User-Agent). Diese Daten sind für die Auslieferung und Sicherheit erforderlich und werden regelmäßig gelöscht.</p>
+
+        <h3>Kontakt per E-Mail</h3>
+        <p>Wenn Sie uns per E-Mail kontaktieren, werden Ihre Angaben zur Bearbeitung der Anfrage gespeichert. Eine Weitergabe erfolgt nicht ohne Ihre Einwilligung.</p>
+
+        <h3>Lokaler Besucherzähler</h3>
+        <p>Diese Website speichert eine reine Zählerinformation im lokalen Speicher Ihres Browsers (<em>localStorage</em>). Es werden keine Cookies gesetzt und keine personenbezogenen Daten übertragen.</p>
+
+        <h3>Ihre Rechte</h3>
+        <p>Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung und Widerspruch im Rahmen der gesetzlichen Vorgaben. Kontakt: siehe Impressum.</p>
+
+        <p class="mini">Stand: 17.08.2025</p>
+      </article>
+
       <footer>© 2025 Urlaub-Ferien.net — Alle Rechte vorbehalten.</footer>
     </section>
   </main>
+
+  <!-- JSON-LD: WebSite + SearchAction + Organization + FAQPage -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"WebSite",
+        "name":"Urlaub-Ferien.net",
+        "url":"http://urlaub-ferien.net/",
+        "potentialAction":{
+          "@type":"SearchAction",
+          "target":"https://www.google.com/search?q=site%3Aurlaub-ferien.net+{search_term_string}",
+          "query-input":"required name=search_term_string"
+        }
+      },
+      {
+        "@type":"Organization",
+        "name":"Urlaub-Ferien.net",
+        "url":"http://urlaub-ferien.net/",
+        "logo":"http://urlaub-ferien.net/favicon.svg",
+        "contactPoint":{
+          "@type":"ContactPoint",
+          "contactType":"customer support",
+          "email":"zagrebrental2000@gmail.com"
+        }
+      },
+      {
+        "@type":"FAQPage",
+        "mainEntity":[
+          {
+            "@type":"Question",
+            "name":"Wie funktioniert die Vermietung der Domain?",
+            "acceptedAnswer":{"@type":"Answer","text":"Exklusive Nutzung per Weiterleitung, Unterseite oder kompletter Landingpage. Laufzeit und Preis nach Absprache."}
+          },
+          {
+            "@type":"Question",
+            "name":"Ist die Domain international nutzbar?",
+            "acceptedAnswer":{"@type":"Answer","text":"Ja, Fokus ist DACH; Weiterleitungen und Kampagnen können weltweit geschaltet werden."}
+          },
+          {
+            "@type":"Question",
+            "name":"Gibt es Tracking oder Cookies?",
+            "acceptedAnswer":{"@type":"Answer","text":"Keine Cookies, kein externes Tracking. Es wird nur ein lokaler Zähler im Browser (localStorage) gespeichert – ohne personenbezogene Daten."}
+          }
+        ]
+      }
+    ]
+  }
+  </script>
 
   <!-- Visits counter (localStorage; starts at 10500) -->
   <script>
@@ -154,7 +274,9 @@
   </script>
 
   <noscript>
-    <div style="position:fixed;left:12px;bottom:12px;background:#fff;color:#111;border:1px solid #ddd;border-radius:10px;padding:6px 10px;font:600 12px system-ui">JavaScript ist deaktiviert – einige Funktionen sind nicht verfügbar.</div>
+    <div style="position:fixed;left:12px;bottom:12px;background:#fff;color:#111;border:1px solid #ddd;border-radius:10px;padding:6px 10px;font:600 12px system-ui">
+      JavaScript ist deaktiviert – einige Funktionen sind nicht verfügbar.
+    </div>
   </noscript>
 </body>
 </html>
