--- a/index.html
+++ b/index.html
@@ -162,28 +162,23 @@
       </article>
 
       <!-- Impressum -->
-      <article class="card" id="impressum" style="margin-top:14px">
-        <h2>Impressum</h2>
-        <p><strong>Betreiber dieser Website:</strong><br>
-        [Ihr Name / Ihre Firma]<br>
-        [Straße und Hausnummer]<br>
-        [PLZ Ort], [Land]</p>
+  <article class="card" id="impressum" style="margin-top:14px">
+  <h2>Impressum</h2>
 
-        <p><strong>Kontakt:</strong><br>
-        E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a><br>
-        Telefon: [optional]</p>
+  <p><strong>Kontakt:</strong><br>
+    E-Mail: <a href="mailto:zagrebrental2000@gmail.com">zagrebrental2000@gmail.com</a>
+  </p>
 
-        <p><strong>USt-IdNr.:</strong> [falls vorhanden]</p>
+  <h3>Haftung für Inhalte</h3>
+  <p>Wir übernehmen keine Gewähr für Aktualität, Richtigkeit und Vollständigkeit der Inhalte.</p>
 
-        <h3>Haftung für Inhalte</h3>
-        <p>Als Diensteanbieter sind wir für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Wir übernehmen keine Gewähr für Aktualität, Richtigkeit und Vollständigkeit.</p>
+  <h3>Haftung für Links</h3>
+  <p>Für Inhalte externer Links übernehmen wir keine Haftung; dafür sind die jeweiligen Anbieter verantwortlich.</p>
 
-        <h3>Haftung für Links</h3>
-        <p>Diese Website kann Links zu externen Websites Dritter enthalten. Auf deren Inhalte haben wir keinen Einfluss; dafür ist stets der jeweilige Anbieter verantwortlich.</p>
+  <h3>Urheberrecht</h3>
+  <p>Eigene Inhalte und Werke unterliegen dem Urheberrecht. Vervielfältigung nur mit schriftlicher Zustimmung.</p>
+</article>
 
-        <h3>Urheberrecht</h3>
-        <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem Urheberrecht. Vervielfältigung nur mit schriftlicher Zustimmung.</p>
-      </article>
 
       <!-- Datenschutz -->
       <article class="card" id="datenschutz" style="margin-top:14px">
